Test StyleServiceImpl and de-double the local styles if they're minified.